clusters/my-cluster/apps/predictyourday/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictyourday
  labels:
    app: predictyourday
  namespace: predictyourday
spec:
  replicas: 0
  selector:
    matchLabels:
      app: predictyourday
  template:
    metadata:
      labels:
        app: predictyourday
    spec:
      containers:
        - name: predictyourday
          image: mrakbg/predictyourday:latest-32
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
