clusters/my-cluster/apps/predictyourday/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictyourday
spec:
  selector:
    app: predictyourday
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
