clusters/my-cluster/apps/predictyourday/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: predictyourday-gateway
  namespace: predictyourday
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3000
        name: http
        protocol: HTTP
      hosts:
        - "*"
