clusters/my-cluster/apps/predictyourday/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: predictyourday
  namespace: predictyourday
spec:
  gateways:
    - predictyourday-gateway  # 👈 external gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: predictyourday-primary
            port:
              number: 80
          weight: 50
        - destination:
            host: predictyourday-canary
            port:
              number: 80
          weight: 50
